# Humanoid_arm

arm_commander/: CMakeLists.txt  package.xml
arm_commander/include/arm_commander/: commander.hpp
arm_commander/launch/: aruco_pick_and_place.launch.py  pick_and_place.launch.py  test2_moveit.launch.py  wrist_servo_pick_and_place.launch.py
arm_commander/mujoco/: aruco_4x4_50_id0.ppm  aruco_4x4_50_id0_old.ppm  openarm_bimanual_aruco.xml
arm_commander/scripts/: aruco_detector.py  aruco_pose_visualizer.py  camera_publisher.py  generate_aruco_ppm.py  left_wrist_servo.py  right_wrist_servo.py  wrist_servo_base.py
arm_commander/src/: aruco_pick_and_place.cpp  commander.cpp  pick_and_place.cpp  test2_moveit.cpp  test_moveit.cpp  wrist_servo_pick_and_place.cpp
openarm_description/.github/workflows/: release.yaml
openarm_description/assets/end_effector/pinch_gripper/meshes/visual/: ee_base_link.dae
openarm_description/assets/robot/openarm_v2.0/urdf/: openarm_v20.bimanual.mujoco.urdf.xacro
openarm_description/assets/robot/openarm_v2.0/urdf/ros2_control/: openarm_bimanual_mujoco_ros2_control.xacro
openarm_mujoco/: .gitignore  README.md  pyproject.toml  setup.py
openarm_mujoco/.github/workflows/: lint.yaml  test.yaml
openarm_mujoco/dev/: README.md
openarm_mujoco/src/openarm_mujoco/v2/: __init__.py  joint_resolver.py  launch.py
openarm_mujoco/src/openarm_mujoco_v2/: __init__.py
openarm_mujoco/v0.3/: openarm.mjcf.xml  openarm_bimanual.mjcf.xml
openarm_mujoco/v1/: openarm_bimanual.xml
openarm_mujoco/v2/: cell.xml  openarm_bimanual.xml  pedestal_pose1_cube.xml
openarm_ros2/openarm/: package.xml
openarm_ros2/openarm_bimanual_moveit_config/config/openarm_v1.0/: joint_limits.yaml  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
openarm_ros2/openarm_bimanual_moveit_config/config/openarm_v2.0/: joint_limits.yaml  moveit_controllers.yaml  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
openarm_ros2/openarm_bimanual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
openarm_ros2/openarm_bringup/: package.xml
openarm_ros2/openarm_bringup/config/controllers/: openarm_bimanual_controllers.yaml  openarm_bimanual_moveit_controllers.yaml
openarm_ros2/openarm_bringup/launch/: mujoco_moveit.launch.py  openarm.bimanual.launch.py
openarm_ros2/openarm_hardware/: CMakeLists.txt  openarm_hardware.xml
openarm_ros2/openarm_hardware/include/openarm_hardware/: openarm_simple_hardware.hpp
openarm_ros2/openarm_hardware/src/: openarm_simple_hardware.cpp
